--- a/app/package.json
+++ b/app/package.json
@@ -9,14 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@flashcoffee/react-native-zendesk-messaging": "^1.0.4",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.11",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.6",
-    "react-native-screens": "~3.20.0",
-    "react-native-safe-area-context": "4.5.0"
+    "react-native-calendars": "^1.1295.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
