--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,9 @@
     "react-hook-form": "^7.43.9",
     "react-native": "0.71.6",
     "react-native-calendars": "^1.1295.0",
-    "react-native-safe-area-context": "4.5.0",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-maps": "1.3.2",
+    "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
