--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,9 @@
     "react-native-calendars": "^1.1295.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-paper": "^5.6.0",
-    "react-native-safe-area-context": "4.5.0",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-maps": "1.3.2",
+    "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
