--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,9 @@
     "react-native": "0.71.6",
     "react-native-calendars": "^1.1295.0",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-charts": "^5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
