--- a/app/package.json
+++ b/app/package.json
@@ -12,13 +12,15 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.11",
+    "expo-camera": "~13.2.1",
+    "expo-face-detector": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-calendars": "^1.1295.0",
+    "react-native-face-detection": "^0.1.1",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-paper": "^5.6.0",
-    "react-native-face-detection": "^0.1.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0"
   },
