--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.6.0
 Django==4.2
 djangorestframework==3.14.0
+djangorestframework-jwt==1.11.0
+PyJWT==1.7.1
 pytz==2023.3
 sqlparse==0.4.3
