--- a/app/package.json
+++ b/app/package.json
@@ -20,13 +20,15 @@
     "react-hook-form": "^7.43.9",
     "react-native": "0.71.6",
     "react-native-calendars": "^1.1295.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-face-detection": "^0.1.1",
-    "react-native-gesture-handler": "^2.9.0",
-    "react-native-paper": "^5.6.0",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-maps": "1.3.2",
+    "react-native-paper": "^5.6.0",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-screens": "~3.20.0",
+    "react-native-svg-charts": "^5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
