--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react-native-calendars": "^1.1264.3",
@@ -21,10 +22,10 @@
     "react-native": "0.71.6",
     "react-native-calendars": "^1.1295.0",
     "react-native-face-detection": "^0.1.1",
-    "react-native-gesture-handler": "^2.9.0",
-    "react-native-paper": "^5.6.0",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-maps": "1.3.2",
+    "react-native-paper": "^5.6.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0"
   },
