--- a/app/package.json
+++ b/app/package.json
@@ -27,7 +27,8 @@
     "react-native-maps": "1.3.2",
     "react-native-paper": "^5.6.0",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-screens": "~3.20.0",
+    "react-native-svg-charts": "^5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
