--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.3.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -22,6 +23,7 @@
     "react-native": "0.71.6",
     "react-native-calendars": "^1.1295.0",
     "react-native-face-detection": "^0.1.1",
+    "react-native-flip-card": "^3.5.7",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-maps": "1.3.2",
