--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@shopify/react-native-skia": "^0.1.184",
     "@types/react-native-calendars": "^1.1264.3",
     "expo": "~48.0.11",
     "expo-camera": "~13.2.1",
@@ -24,8 +25,10 @@
     "react-native-face-detection": "^0.1.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-graph": "^1.0.1",
     "react-native-maps": "1.3.2",
     "react-native-paper": "^5.6.0",
+    "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg-charts": "^5.4.0"
