--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.43.9",
     "react-native": "0.71.6",
     "react-native-calendars": "^1.1295.0",
+    "react-native-csv": "^0.2.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
